-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
None
-
Android Nexus 10
Windows 8.1
dev branch (3c1041cbfd70a03322ca0278e0db8ac0651c0792)
-
01cb25953d086e299b235a49853c7410c062e4c9
Steps to reproduce:
1. Start attached main.qml
What did I expect:
Both the red and blue rectangle should have the same visual opacity
What I observed:
Only the red rectangle got the visual opacity as specified
This is not necessary tied to the timer (I observed this originally as a result of a network request).
You can also click on the red rectangle. It will then toggle the opacity from 0.1 to 0.9. However, in this case it seems that the red rectangle is painted on top of the blue one.
For Gerrit Dashboard: QTBUG-42530 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
102861,2 | Traverse children correctly when reparenting. | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |